@@ -1,5 +1,7 @@
 - rpmdrake:
   o use radio buttons in order to show current search mode 
+- edit_urpm_sources:
+  o default to use mirrorlist
 
 Version 4.21 - 30 September 2008, Thierry Vignaud
 
